# SentinelLog

./: .gitignore  README.md  main.py  parser.py  pyproject.toml  requirements.txt
sentinellog/: analyzer.py  cli.py  parser.py  report.py  scorer.py
sentinellog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_parser.py
